[package]
name = "uefi-sample"
version = "0.1.0"
authors = ["segfo k.segfo@gmail.com"]

[dependencies]
uefi = { git = "https://github.com/segfo/rust-uefi", branch = "beta" }
rlibc = "1.0"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }

[lib]
crate-type = ["staticlib"]
