[package]
name = "uefi-sample"
version = "0.1.0"
authors = ["segfo k.segfo@gmail.com"]

[profile.dev]
debug=true

[dependencies]
#uefi = { git = "https://github.com/segfo/rust-uefi", branch = "beta" }
uefi = { path = "../rust-uefi", branch = "beta" }
bitflags = "1.0"

[lib]
crate-type = ["staticlib"]
